# PROTOCOL_MODEL

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASE_CHECKLIST.md  ROADMAP.md  package-lock.json  package.json  pyproject.toml
.github/ISSUE_TEMPLATE/: protocol-requirement-correction.yml  scenario-contribution.yml
docs/: README.md  apb_derivation.md  axi4_derivation.md  axi4_read_interleaving_report.md  experiments.md  manual.md  project-guide.md  semantics.md  theory_audit.md  verification_contract.md  verification_projects.md
docs/architecture/: README.md  ace-chi-links.md  address-fabric.md  amba-link-families.md  amba-link-variants.md  amba-phased-links.md  axi4-link.md  (+14 more)
protocol_model/: __init__.py  __main__.py  cli.py  relations.py
scripts/: quickstart.sh
showcase/: README.md
tests/: __init__.py  test_ace_lite_link.py  test_ahb_link.py  test_apb_link.py  test_artifacts.py  test_axi4_exclusive.py  test_axi4_link.py  test_axi4_lite.py  test_axi4_narrow.py  test_axi4_observation.py  test_axi4_stream.py  test_causal_graph.py  test_observation.py  test_quiet.py  test_system_protocol.py  test_virtual_dut_address_space.py  test_virtual_dut_ahb_attachment.py  test_virtual_dut_apb_attachment.py  test_virtual_dut_apb_fabric.py  test_virtual_dut_axi4_apb_bridge.py  test_virtual_dut_axi4_attachment.py  test_virtual_dut_axi4_lite_apb_bridge.py  test_virtual_dut_axi4_lite_attachment.py  test_virtual_dut_axi4_stream_attachment.py  test_virtual_dut_binding.py  test_virtual_dut_empty_endpoints.py  test_virtual_dut_translation.py
(+295 files in other folders)
